# hyper-arb

./: .gitignore  .gitmodules  Cargo.toml  docker-compose.yaml  package-lock.json  package.json  rustfmt.toml  tsconfig.json
config/: main.toml
inspi/: impl.rs
inspi/dex/: exposure.rs  liquidswap.rs  mint.rs  mod.rs  swap.rs  u3pos.rs
inspi/exec/: mod.rs
inspi/exec/chain/: base.rs  mainnet.rs  mod.rs  unichain.rs
misc/: prepa.md
ops/: Dockerfile  Dockerfile.manager  prisma.all.sh  schema.prisma  start.sh
scripts/: fork-and-deploy.sh  package.json
sol/: foundry.toml
sol/broadcast/DeployHyperArb.s.sol/998/: run-1758502070.json  run-1758502117.json  run-1758502128.json
sol/broadcast/DeployHyperArb.s.sol/999/: run-latest.json
sol/script/: Deploy.s.sol  DeployHyperArb.s.sol
sol/sh/: deploy.sh
sol/src/: HyperArb.sol
sol/src/interfaces/: ICore.sol  IRouter.sol  ISwapRouter.sol
src/: arbitrager.rs  hedger.rs
src/manager/: main.ts  monitoring.ts
src/manager/types/: interfaces.ts
src/manager/utils/: BalanceMonitor.ts  CoreWriterUtils.ts  PrecompileUtils.ts
src/shd/: core.rs  data.rs  dex.rs  lib.rs  misc.rs  sol.rs  types.rs
src/shd/abis/: ICoreWriter.json  PythOracle.json
src/shd/core/: api.rs  mod.rs  precompiles.rs  spot.rs
src/shd/dex/: mod.rs  pool_data.rs  swap.rs  swap_double_leg.rs  swap_router.rs
src/shd/oracles/: hypercore.rs  mod.rs  pyth.rs  redstone.rs
src/shd/utils/: evm.rs  misc.rs  mod.rs
tests/: balance_check.rs  debug_eth_pools.rs  debug_hyperliquid.rs  debug_spot_meta.rs  oracle_prices.rs  test_pool_data.rs
(+3 files in other folders)
